# fall_reaction

./: .gitignore  CMakeLists.txt  README.md
character/: humanoid_SFU.xml  jump_box.xml  mxm_t3.xml  test.xml
cmake_module/: FindOpenGLRecorder.cmake
data/: Trial001.bvh
imgui/: CMakeLists.txt
motion/: SFU_CircleWalking.bvh  mixamo_box_jump.bvh  motion_control.txt  motion_idle.txt  motion_list.txt  motion_list2.txt  mxm_armada.bvh  mxm_fjump.bvh  mxm_idle.bvh  mxm_jogging.bvh  mxm_jump1.bvh  mxm_jump2.bvh  mxm_jump3.bvh  mxm_jump4.bvh  mxm_run.bvh  mxm_run2.bvh  mxm_stopandgo.bvh  mxm_turn_180.bvh  mxm_walk.bvh  mxm_walk_backward.bvh  mxm_walk_circle.bvh  mxm_walk_circle_r.bvh  mxm_walk_left.bvh  mxm_walk_right.bvh  mxm_walk_right2.bvh
network/: CMakeLists.txt  SimEnv.cpp  SimEnv.h  amp.py  env.py  monitor.py  network.py  ppo.py  utils.py
render/: CMakeLists.txt  Camera.cpp  Camera.h  GLUTWindow.cpp  GLUTWindow.h  MainInterface.cpp  MainInterface.h  main.cpp
render_ui/: CMakeLists.txt  Camera.h  GLUTWindow.cpp  GLUTWindow.h  GLfunctions.cpp  MainInterface.cpp  MainInterface.h  main.cpp
sim/: BVH.cpp  BVH.h  BVHToXML.cpp  CMakeLists.txt  Character.cpp  Character.h  CharacterConfigurations.h  Controller.cpp  Controller.h  Functions.cpp  Functions.h  ReferenceManager.cpp  ReferenceManager.h  SkeletonBuilder.cpp  SkeletonBuilder.h
